tests/compile_failure/src/Math/Vector3.unary_minus.fail.cpp
#include <Phi/Math/Vector3.hpp>

int main()
{
    phi::Vector3<unsigned> v(1, 2, 3);

    phi::Vector3<unsigned> v2 = -v;
}
